// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render title 1`] = `
<header
  className=""
>
  <h1
    className="cf-10h3ujg"
  >
    Title
  </h1>
</header>
`;

exports[`should render title 2`] = `
".cf-10h3ujg {
  font-size: 2rem;
  line-height: 1.2;
  font-weight: 400
}"
`;

exports[`should render title/subtitle 1`] = `
<header
  className=""
>
  <h1
    className="cf-10h3ujg"
  >
    Title
  </h1>
  <h2
    className="cf-jjd3ph"
  >
    Subtitle
  </h2>
</header>
`;

exports[`should render title/subtitle 2`] = `
".cf-10h3ujg {
  font-size: 2rem;
  line-height: 1.2;
  font-weight: 400
}
.cf-jjd3ph {
  color: #7c7c7c;
  font-weight: 300
}"
`;
